[package]
name = "openprocessmon"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.2"
env_logger = "0.11.3"

[dependencies.ferrisetw]
git = "https://github.com/yjugl/ferrisetw.git"
branch = "stack-trace-item"

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Etw",
]
